working game with mix of jQuery and new javascript

--- a/index.html
+++ b/index.html
@@ -21,76 +21,76 @@
     <div class="wrapper">
       <div class="gameboard">
         <div class="normal left">
-          <button id="front1" class="card front">
+          <button id="front01" class="card front">
             <h4 class="center-align">1</h4>
           </button>
-          <button id="back1" class="card back">
+          <button id="back01" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
         <div class="normal">
-          <button id="front2" class="card front">
+          <button id="front02" class="card front">
             <h4 class="center-align">2</h4>
           </button>
-          <button id="back2" class="card back">
+          <button id="back02" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
         <div class="normal">
-          <button id="front3" class="card front">
+          <button id="front03" class="card front">
             <h4 class="center-align">3</h4>
           </button>
-          <button id="back3" class="card back">
+          <button id="back03" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
         <div class="normal">
-          <button id="front4" class="card front">
+          <button id="front04" class="card front">
             <h4 class="center-align">4</h4>
           </button>
-          <button id="back4" class="card back">
+          <button id="back04" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
 
         <div class="normal left">
-          <button id="front5" class="card front">
+          <button id="front05" class="card front">
             <h4 class="center-align">5</h4>
           </button>
-          <button id="back5" class="card back">
+          <button id="back05" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
         <div class="normal">
-          <button id="front6" class="card front">
+          <button id="front06" class="card front">
             <h4 class="center-align">6</h4>
           </button>
-          <button id="back6" class="card back">
+          <button id="back06" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
         <div class="normal">
-          <button id="front7" class="card front">
+          <button id="front07" class="card front">
             <h4 class="center-align">7</h4>
           </button>
-          <button id="back7" class="card back">
+          <button id="back07" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
         <div class="normal">
-          <button id="front8" class="card front">
+          <button id="front08" class="card front">
             <h4 class="center-align">8</h4>
           </button>
-          <button id="back8" class="card back">
+          <button id="back08" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
 
         <div class="normal left">
-          <button id="front9" class="card front">
+          <button id="front09" class="card front">
             <h4 class="center-align">9</h4>
           </button>
-          <button id="back9" class="card back">
+          <button id="back09" class="card back">
             <h4 class="center-align">Z</h4>
           </button>
         </div>
@@ -154,7 +154,7 @@
       </div>
 
       <div class="row">
-        <button class="btn col s5">New Game</button>
+        <button class="btn col s5" onclick="window.location.reload()">New Game</button>
         <p class="col s1"></p>
         <button class="btn col s5">End Game</button>
       </div>
