--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h4 class="center-align">1</h4>
           </button>
           <button id="back01" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -33,7 +33,7 @@
             <h4 class="center-align">2</h4>
           </button>
           <button id="back02" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -41,7 +41,7 @@
             <h4 class="center-align">3</h4>
           </button>
           <button id="back03" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -49,7 +49,7 @@
             <h4 class="center-align">4</h4>
           </button>
           <button id="back04" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
 
@@ -58,7 +58,7 @@
             <h4 class="center-align">5</h4>
           </button>
           <button id="back05" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -66,7 +66,7 @@
             <h4 class="center-align">6</h4>
           </button>
           <button id="back06" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -74,7 +74,7 @@
             <h4 class="center-align">7</h4>
           </button>
           <button id="back07" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -82,7 +82,7 @@
             <h4 class="center-align">8</h4>
           </button>
           <button id="back08" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
 
@@ -91,7 +91,7 @@
             <h4 class="center-align">9</h4>
           </button>
           <button id="back09" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -99,7 +99,7 @@
             <h4 class="center-align">10</h4>
           </button>
           <button id="back10" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -107,7 +107,7 @@
             <h4 class="center-align">11</h4>
           </button>
           <button id="back11" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal">
@@ -115,7 +115,7 @@
             <h4 class="center-align">12</h4>
           </button>
           <button id="back12" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
 
@@ -124,7 +124,7 @@
             <h4 class="center-align">13</h4>
           </button>
           <button id="back13" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal bottom">
@@ -132,7 +132,7 @@
             <h4 class="center-align">14</h4>
           </button>
           <button id="back14" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal bottom">
@@ -140,7 +140,7 @@
             <h4 class="center-align">15</h4>
           </button>
           <button id="back15" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
         <div class="normal bottom">
@@ -148,7 +148,7 @@
             <h4 class="center-align">16</h4>
           </button>
           <button id="back16" class="card back">
-            <h4 class="center-align">Z</h4>
+            <h4 class="center-align"> </h4>
           </button>
         </div>
       </div>
@@ -156,7 +156,7 @@
       <div class="row">
         <button class="btn col s5" onclick="window.location.reload()">New Game</button>
         <p class="col s1"></p>
-        <button class="btn col s5">End Game</button>
+        <button class="btn col s5" onclick="window.location.reload()">End Game</button>
       </div>
     </div>
   </body>
